# src/model.py
@@ -1,4 +1,4 @@
-from datetime import datetime
+from datetime import datetime,timedelta
 from .extensions import db
 from werkzeug.security import generate_password_hash, check_password_hash
 from sqlalchemy.dialects.postgresql import JSON
@@ -79,27 +79,28 @@ class Cart(db.Model):
 
     id = db.Column(db.Integer, primary_key=True)
     customer_id = db.Column(db.Integer, db.ForeignKey("customer.id"), nullable=False)
-    cart_data = db.Column(JSON, nullable=False, default={})  
-    total_price = db.Column(db.Float,nullable=False)
+    cart_data = db.Column(JSON, nullable=False, default={})
     created_at = db.Column(db.DateTime, default=datetime.now())
     updated_at = db.Column(db.DateTime, onupdate=datetime.now())
+    expires_at = db.Column(db.DateTime, nullable=True)
 
     customer = db.relationship("Customer", backref="carts")
 
     def __repr__(self):
         return f"<Cart id={self.id} customer_id={self.customer_id}>"
 
-    def save_cart_data(self, cart_items):
+    def save_cart_data(self, cart_items, expire_in_days=3):
         self.cart_data = cart_items
         self.total_price = sum(
             (item.get("price", 0) or 0) * (item.get("quantity", 0) or 0)
             for item in cart_items
         )
+        self.expires_at =  datetime.now() + timedelta(days=expire_in_days)
         db.session.commit()
 
     def load_cart_data(self):
         return self.cart_data
-        
+    
 
 
 class CartItem(db.Model):
@@ -114,3 +115,27 @@ class CartItem(db.Model):
 
     def __repr__(self):
         return f"<CratItems customer_id {self.customer_id} product_id {self.product_id} quantity {self.quantity}>"
+
+
+class Order(db.Model):
+    __tablename__ = "orders"
+
+    id = db.Column(db.Integer, primary_key=True)
+    customer_id = db.Column(db.Integer, db.ForeignKey("customer.id"), nullable=False)
+    order_date = db.Column(db.DateTime, default=datetime.now)
+    total_amount = db.Column(db.Float, nullable=False)
+
+    customer = db.relationship("Customer", backref="orders")
+    order_items = db.relationship("OrderItem", backref="order", lazy=True)
+
+
+class OrderItem(db.Model):
+    __tablename__ = "order_items"
+
+    id = db.Column(db.Integer, primary_key=True)
+    order_id = db.Column(db.Integer, db.ForeignKey("orders.id"), nullable=False)
+    product_id = db.Column(db.Integer, db.ForeignKey("products.id"), nullable=False)
+    quantity = db.Column(db.Integer, nullable=False)
+    price = db.Column(db.Float, nullable=False)
+
+    product = db.relationship("Product", backref="order_items")
